--- a/app/main/templates/completed.html
+++ b/app/main/templates/completed.html
@@ -7,5 +7,5 @@
 
 {% block content %}
 <h1>You have already completed the task</h1>
-<p>You can't do it again!</p>
+<p>You can't do it again</p>
 {% endblock %}
