--- a/app/main/templates/instructions.html
+++ b/app/main/templates/instructions.html
@@ -13,10 +13,41 @@
 <button id="ins1btn">Continue</button>
 </div>
 
-<div id="ins2" style="displey:none">
+<div id="ins2" style="display:none">
 <p>Page 2 text blah blah blah</p>
 <button id="ins2btn">Continue</button>
 </div>
+
+<div id="comprehension" style="display:none">
+	<h3>Comprehension Quiz</h2>
+
+	<ol>
+	  <li>Question 1?   (true)<br>
+	    <select id="comp_q1" class="comp_questions">
+	      <option value="noresp" SELECTED></option>
+	      <option value="true">True</option>
+	      <option value="false">False</option>
+	    </select>
+	  </li>
+
+	  <li>Question 2?   (5)<br>
+	    <select id="comp_q2" class="comp_questions">
+	      <option value="noresp" SELECTED></option>
+	      <option value="1">1</option>
+	      <option value="2">2</option>
+	      <option value="3">3</option>
+	      <option value="4">4</option>
+	      <option value="5">5</option>
+	      <option value="6">6</option>
+	    </select>
+	  </li>
+	</ol>
+
+	<button id = "comp_check_btn">Check answers</button>
+	<button id = "done_comp" disabled>Start</button>
+</div>
+
+
 
 {% endblock %}
 
