trying to write data

--- a/app/main/templates/task.html
+++ b/app/main/templates/task.html
@@ -8,6 +8,7 @@
 
 <h1>Main task</h1>
 
+{{ testvar }} <!-- VARIABLES SET IN PYTHON CAN BE READ OUT HERE BUT HOW IN JS?-->
 
 <h2 id="trial_counter"></h2>
 <h3>Do you like this circle?</h3>
@@ -18,7 +19,7 @@
 <br>
 <button id="task_l_btn" class="response_btns">No</button><button id="task_r_btn" class="response_btns">Yes</button>
 
-<!-- {{ testvar }} VARIABLES SET IN PYTHON CAN BE READ OUT HERE -->
+
 
 {% endblock %}
 
