linked the variables to the data saving

--- a/flask/app/main/templates/task.html
+++ b/flask/app/main/templates/task.html
@@ -47,7 +47,7 @@
 		</ol>
 
 		<button id = "comp_check_btn">Check answers</button>
-		<button id = "done_comp">Start</button>
+		<button id = "done_comp"><b>Start</b></button>
 	</div>
 </div>
 
