First commit with changes to use non-root flask+gunicorn+supervisord

--- a/app/main/templates/welcome.html
+++ b/app/main/templates/welcome.html
@@ -8,7 +8,7 @@
 
 		<p>This is the landing page.</p>
 
-		<a href="{{root_string}}">Click here to start the task</a>
+		<a href="{{ url_for('main.task') }}">Click here to start the task</a>
 		<!-- TODO: make dynamic with curly braces -->
 		<!-- "/experiments/flaskdemo" -->
 	</div>
