--- a/app/main/templates/task.html
+++ b/app/main/templates/task.html
@@ -153,7 +153,7 @@
 	    </form>
 	    <br>
 	    
-	    <button id="done_debrief" disabled>Done</button>
+	    <button id="done_debrief" data-submit-url="{{ url_for('main.task') }}" disabled>Done</button>
 	</div>
 </div>
 
@@ -167,7 +167,7 @@
 
 
 {% block custom_js %}
-<script> var root_string = '{{root_string}}'; </script><!-- GET THE ROOT FROM FLASK tO JS -->
+<span id="root_url_holder" data-root-url="{{ url_for('main.task') }}"></span>
 <script src="{{ url_for('main.static', filename='js/task.js') }}" type="text/javascript"> </script>
 <script src="{{ url_for('main.static', filename='js/debrief.js') }}" type="text/javascript"> </script>
 {% endblock %}
